--- a/device-location/index.html
+++ b/device-location/index.html
@@ -17,7 +17,7 @@
     <!-- Import leaflet.js JS -->
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
         integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
-    <script src="js/webamp_start.js"></script>
+    <script src="js/webamp.js"></script>
 </body>
 
 </html>
